# pydoas

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  TODO.rst  VERSION.rst  pydoas_env.yml  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: CI.yml  publish_pypi.yaml  release_github.yaml
docs/: Makefile  api.rst  code.rst  conf.py  examples.rst  index.rst  make.bat  practicalities.rst  readme_link.rst  remarks_doas_analysis.rst  requirements.txt  supplemental.rst
pydoas/: __init__.py  analysis.py  dataimport.py  examples.py  helpers.py  inout.py
pydoas/_dropbox_conflict/: Analysis (Jonas Gliß's conflicted copy 2016-08-18).py
pydoas/data/: import_info.txt
pydoas/data/fake_resultfiles/: fake_result_file_fit1.csv  fake_result_file_fit2.csv
pydoas/test/: test_highlevel.py
scripts/: RUN_ALL_SCRIPTS.py  SETTINGS.py  __init__.py  ex1_read_and_plot_example_data.py  ex2_create_new_import_spec.py
scripts/scripts_out/: README.txt
test/: __init__.py  test_highlevel.py
